--- a/nav_team.html
+++ b/nav_team.html
@@ -98,9 +98,34 @@
         </div>
 	</div>
     <div class="hero headings">
-        <h3>La comunidad GDG Lima</h3>
-        <h4>Equipo organizador del evento.</h4>
+        <h3>Se agradece la gentil colaboración de las siguientes personas:</h3>
+        <h4>Equipo organizador y responsable del evento.</h4>
     </div>
+
+
+ <div class="hero headings" style="text-align:center;">
+        <h3>Organizers</h3>
+        <h4>Equipo encargado de la organización general del evento.</h4>
+    </div>
+
+ <ul class="ch-grid">
+  <li>
+            <div class="ch-item ch-img-5">
+              <div class="ch-info">
+               <h3>Juan Jose</h3>
+                <p>Rodríguez<a href="http://gplus.to/jrodriguezv10">GDGLima</a></p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="ch-item ch-img-10">
+              <div class="ch-info">
+                <h3>Lennon</h3>
+                <p>Shimokawa<a href="http://gplus.to/lshimokawa">GDGLima</a></p>
+              </div>
+            </div>
+          </li>
+        </u>
 
    <div class="hero headings" style="text-align:center;">
         <h3>Developers</h3>
@@ -144,19 +169,37 @@
           </li>
 <br>
 
- <div class="hero headings" style="text-align:center;">
-        <h3>Organizers</h3>
-        <h4>Equipo encargado de la organización general, sponsorships, difusión/marketing, call4papers y relaciones públicas.</h4>
+<div class="hero headings" style="text-align:center;">
+        <h3>Diseño Gráfico y Publicitario</h3>
+        <h4>Colaboradores con el diseño gráfico y publicitario.</h4>
     </div>
 
- <li>
-            <div class="ch-item ch-img-5">
+<li>
+            <div class="ch-item ch-img-21">
               <div class="ch-info">
-               <h3>Juan Jose</h3>
-                <p>Rodríguez<a href="http://gplus.to/jrodriguezv10">GDGLima</a></p>
+                <h3>Ernesto</h3>
+                <p>Tarrillo Pérez<a href="http://gplus.to/ernestotarrillo">Colaborador</a></p>
               </div>
             </div>
           </li>
+ 
+<li>
+            <div class="ch-item ch-img-22">
+              <div class="ch-info">
+                <h3>Laura</h3>
+                <p>Cardenas<a href="http://gplus.to/lauracardenas">Colaboradora</a></p>
+              </div>
+            </div>
+          </li>
+
+
+ <div class="hero headings" style="text-align:center;">
+        <h3>Relaciones Públicas y Difusión</h3>
+        <h4>Encargados de las relaciones públicas y difusión del evento.</h4>
+    </div>
+
+
+
           <li>
             <div class="ch-item ch-img-6">
               <div class="ch-info">
@@ -165,50 +208,14 @@
               </div>
             </div>
           </li>
-          <li>
-            <div class="ch-item ch-img-7">
-              <div class="ch-info">
-                <h3>Maria Jose</h3>
-                <p>Torres Martijena<a href="http://gplus.to/majotorres">GDGLima</a></p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="ch-item ch-img-8">
-              <div class="ch-info">
-                <h3>Wendy</h3>
-                <p>Morales Yovera<a href="http://gplus.to/wendyly">GDGLima</a></p>
-              </div>
-            </div>
-          </li>
 
-<br>
 
- <li>
-            <div class="ch-item ch-img-9">
-              <div class="ch-info">
-               <h3>Zherly</h3>
-                <p>Vega<a href="http://gplus.to/zherlyvega">GDGLima</a></p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="ch-item ch-img-10">
-              <div class="ch-info">
-                <h3>Lennon</h3>
-                <p>Shimokawa<a href="http://gplus.to/lshimokawa">GDGLima</a></p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="ch-item ch-img-11">
-              <div class="ch-info">
-                <h3>Jhoon</h3>
-                <p>Saravia<a href="http://gplus.to/jhoon">GDGLima</a></p>
-              </div>
-            </div>
-          </li>
-          <li>
+<div class="hero headings" style="text-align:center;">
+        <h3>Sponsorship</h3>
+        <h4>Encargados del plan de Sponsors para el evento.</h4>
+    </div>
+
+   <li>
             <div class="ch-item ch-img-12">
               <div class="ch-info">
                 <h3>Alvaro</h3>
@@ -216,35 +223,15 @@
               </div>
             </div>
           </li>
-
-          <br>
-
- <li>
-            <div class="ch-item ch-img-13">
+         <li>
+            <div class="ch-item ch-img-18">
               <div class="ch-info">
-               <h3>Hansy</h3>
-                <p>Schmitt Camacho<a href="http://gplus.to/hansyschmitt">GDGLima</a></p>
+                <h3>Jimmy</h3>
+                <p>Granados<a href="http://goo.gl/5yDp1">GDGLima</a></p>
               </div>
             </div>
           </li>
-          <li>
-            <div class="ch-item ch-img-14">
-              <div class="ch-info">
-                <h3>Meison</h3>
-                <p>Chirinos<a href="http://gplus.to/ameison">GDGLima</a></p>
-              </div>
-            </div>
-          </li>
-
-          <li>
-            <div class="ch-item ch-img-15">
-              <div class="ch-info">
-               <h3>Niger</h3>
-                <p>Arce<a href="http://gplus.to/narce">GDGLima</a></p>
-              </div>
-            </div>
-          </li>
-          <li>
+            <li>
             <div class="ch-item ch-img-16">
               <div class="ch-info">
                 <h3>Milton</h3>
@@ -255,32 +242,11 @@
 
 <br>
 
-          <li>
-            <div class="ch-item ch-img-17">
-              <div class="ch-info">
-                <h3>Geferson</h3>
-                <p>Pillaca Gonzales<a href="http://gplus.to/gpillaca">GDGLima</a></p>
-              </div>
-            </div>
-          </li>
 
-           <li>
-            <div class="ch-item ch-img-18">
-              <div class="ch-info">
-                <h3>Jimmy</h3>
-                <p>Granados<a href="http://goo.gl/5yDp1">GDGLima</a></p>
-              </div>
-            </div>
-          </li>
 
-  <li>
-            <div class="ch-item ch-img-21">
-              <div class="ch-info">
-                <h3>Ernesto</h3>
-                <p>Tarrillo Pérez<a href="http://gplus.to/ernestotarrillo">GDGLima</a></p>
-              </div>
-            </div>
-          </li>
+          
+
+  
         </ul>
 
       </section>
