--- a/nav_programa.html
+++ b/nav_programa.html
@@ -95,7 +95,7 @@
         <h3 style="background-color:#FFFFFF; border-radius:30%; color:#4d8cf6;" align="center">Lunes 1 de Abril 2013: Google for Entrepreneurs</h3>
         <h3>De 7:00PM a 9:30PM</h3>
         <h4>Universidad Peruana de Ciencias Aplicadas UPC- Sede Monterrico - Aula Magna</h4>
-        <h4>Registro: <a href="http://gdglima-entrepreneurs.eventbrite.com/">gdglima-entrepreneurs.evenbrite.com</a></h4>
+        <h4>Registro: <a href="http://gdglima-entrepreneurs.eventbrite.com/">gdglima-entrepreneurs.eventbrite.com</a></h4>
     </div>
 
     <div class="container speakers text-center">
