--- a/nav_team.html
+++ b/nav_team.html
@@ -104,7 +104,7 @@
 
 
  <div class="hero headings" style="text-align:center;">
-        <h3>Organizers</h3>
+        <h3>Organización del Evento</h3>
         <h4>Equipo encargado de la organización general del evento.</h4>
     </div>
 
@@ -125,10 +125,34 @@
               </div>
             </div>
           </li>
+          <li>
+            <div class="ch-item ch-img-1">
+              <div class="ch-info">
+               <h3>Eduardo</h3>
+                <p>Medina Alfaro <a href="http://gplus.to/emedinaa">GDGLima</a></p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="ch-item ch-img-4">
+              <div class="ch-info">
+                <h3>Alévandië</h3>
+                <p>Urbina López <a href="http://gplus.to/alevandie">GDGLima</a></p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="ch-item ch-img-6">
+              <div class="ch-info">
+                <h3>Roxana</h3>
+                <p>Panaqué Cávana<a href="http://gplus.to/rbpanaque">GDGLima</a></p>
+              </div>
+            </div>
+          </li>
         </u>
 
    <div class="hero headings" style="text-align:center;">
-        <h3>Developers</h3>
+        <h3>Developer Team</h3>
         <h4>Equipo de desarollo encargado del website y el app android del evento.</h4>
     </div>
 
@@ -170,7 +194,7 @@
 <br>
 
 <div class="hero headings" style="text-align:center;">
-        <h3>Diseño Gráfico y Publicitario</h3>
+        <h3>Dising Team</h3>
         <h4>Colaboradores con el diseño gráfico y publicitario.</h4>
     </div>
 
@@ -194,7 +218,7 @@
 
 
  <div class="hero headings" style="text-align:center;">
-        <h3>Relaciones Públicas y Difusión</h3>
+        <h3>Community Managers</h3>
         <h4>Encargados de las relaciones públicas y difusión del evento.</h4>
     </div>
 
@@ -208,14 +232,7 @@
               </div>
             </div>
           </li>
-
-
-<div class="hero headings" style="text-align:center;">
-        <h3>Sponsorship</h3>
-        <h4>Encargados del plan de Sponsors para el evento.</h4>
-    </div>
-
-   <li>
+          <li>
             <div class="ch-item ch-img-12">
               <div class="ch-info">
                 <h3>Alvaro</h3>
@@ -239,6 +256,15 @@
               </div>
             </div>
           </li>
+
+
+<div class="hero headings" style="text-align:center;">
+        <h3>Agradecimientos Especiales</h3>
+        <h4></h4>
+    </div>
+
+   Autoridades de la FIA-USMP<br>
+   Autoridades de la UPC
 
 <br>
 
