--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
     <link href="assets/css/bootstrap.css" rel="stylesheet">
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="assets/css/app.css" rel="stylesheet">
+    <link rel="canonical" href="http://gdgandroidtour.gdglima.org/" />
 
 
    <link rel="stylesheet" type="text/css" href="assets/css/demo.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/common.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/style2.css" />
     <script type="text/javascript" src="js/modernizr.custom.79639.js"></script>
+    <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -156,11 +158,20 @@
             </div>
           </li>
 
-<br><br>
+<div class="gplus1">
+      <g:plusone size="tall"></g:plusone>
+
+    <a href="https://twitter.com/share" class="twitter-share-button" data-text="#AndroidTourPeru #GDGLima #GDGArequipa con #DavidChandler" data-via="gdglima" data-lang="es" data-hashtags="AndroidTourPeru">Twittear</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script> <b>Tuitea los Hashtags!</b><b style="color:#4d8cf6;">
+#AndroidTourPeru - #GDGLima - #GDGArequipa</b>
+</div>
+
+   </a><br>
+   <a style="color:#000; text-decoration:none;" target="_blank" href="https://plus.google.com/events/c3s0aq4fjlrpbt86s4i6vt3j53c?hl=es">Google+ del Evento <b style="color:#4d8cf6;">#AndroidTourPeru</b>
 
 <hr>
 <div align="center" id="evenbrite">
-  <h2>El ingreso es libre y totalmente gratuito previo registro</h2><h1>Regístrate aquí</h1><br>
+  <h2>El ingreso es libre y totalmente gratuito previo registro</h2><h1>Regístrate aquí para el 2 de Abril</h1><br>
   <div style="width:80%; text-align:left; opacity:0.75;" ><iframe  src="http://www.eventbrite.com/tickets-external?eid=5696849430&ref=etckt&v=2" frameborder="0" height="214" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Vender entradas en línea</a> <span style="color:#ddd;">a través de</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
 </div>
   <img style="display:block; margin:0 auto 0 auto;  margin-top:-250px;" src=assets/images/androidtheme.png></img>
