eventbrite de entrepreneurs
event para el 1 de abril en el index

--- a/index.html
+++ b/index.html
@@ -171,12 +171,16 @@
 
 <hr>
 <div align="center" id="evenbrite">
-  <h2>El ingreso es libre y totalmente gratuito previo registro</h2><h1>Regístrate aquí para el 2 de Abril</h1><br>
+  <h2>El ingreso es libre y totalmente gratuito previo registro #AndroidLimaDay</h2><h1>Regístrate aquí para el 2 de Abril</h1><br>
   <div style="width:80%; text-align:left; opacity:0.75;" ><iframe  src="http://www.eventbrite.com/tickets-external?eid=5696849430&ref=etckt&v=2" frameborder="0" height="214" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Vender entradas en línea</a> <span style="color:#ddd;">a través de</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
 </div>
   <img style="display:block; margin:0 auto 0 auto;  margin-top:-250px;" src=assets/images/androidtheme.png></img>
   
- 
+<br>
+ <div align="center" id="evenbrite">
+  <h2>El ingreso es libre y totalmente gratuito previo registro #GoogleforEntrepreneurs</h2><h1>Regístrate aquí para el 1 de Abril</h1><br>
+  <div style="width:80%; text-align:left; opacity:0.75;" ><iframe  src="http://www.eventbrite.com/tickets-external?eid=5824275565&ref=etckt&v=2" frameborder="0" height="214" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Vender entradas en línea</a> <span style="color:#ddd;">a través de</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
+</div>
 
 <br><br><br><br>
 
