target_blank e eventbrite
cambios target_blank e eventbrite

--- a/nav_sponsor.html
+++ b/nav_sponsor.html
@@ -114,7 +114,7 @@
             <div class="ch-item"> 
               <div class="ch-info">
                 <h3>USMP</h3>
-                <p>Universidad de San Martín de Porres<a href="http://www.usmp.edu.pe"><br>www</a></p>
+                <p>Universidad de San Martín de Porres<a href="http://www.usmp.edu.pe" target="_blank"><br>www</a></p>
               </div>
               <div class="ch-thumb ch-img-2"></div>
             </div>
@@ -124,17 +124,17 @@
             <div class="ch-item"> 
               <div class="ch-info">
                 <h3>UPC</h3>
-                <p>Universidad Peruana de Ciencias Aplicadas<a href="http://www.upc.edu.pe"><br>www</a></p>
+                <p>Universidad Peruana de Ciencias Aplicadas<a href="http://www.upc.edu.pe" target="_blank"><br>www</a></p>
               </div>
               <div class="ch-thumb ch-img-1"></div>
             </div>
           </li>
-          
+
         <li>
             <div class="ch-item"> 
               <div class="ch-info">
                 <h3>Belatrix</h3>
-                <p>Gold Sponsor<a href="http://www.belatrixsf.com"><br>www</a></p>
+                <p>Gold Sponsor<a href="http://www.belatrixsf.com" target="_blank"><br>www</a></p>
               </div>
               <div class="ch-thumb ch-img-3"></div>
             </div>
