nuevos speakers y ajustes menores

--- a/nav_speaker.html
+++ b/nav_speaker.html
@@ -102,8 +102,8 @@
     </div>
 
     <div class="container speakers">
+      <!-- CHANDLER -->
     	<div class="row">
-
         <div class="span12">
           <div class="row">
             <div class="span3">
@@ -118,7 +118,7 @@
                             <div class="ch-info-front ch-img-1"></div>
                             <div class="ch-info-back">
                               <h3>David C.</h3>
-                          <p>Google Developer Advocate<a href="http://gplus.to/davidch">GPlus</a></p>
+                          <p>Google Developer Advocate<a href="http://gplus.to/davidch" target="_new">GPlus</a></p>
                             </div>
                           </div>
                         </div>
@@ -141,9 +141,89 @@
 
             </div>
           </div>
-
         </div>
     	</div><!-- /.row -->
+
+
+      <!-- CATALAN  -->
+      <div class="row">
+
+        <div class="span12">
+          <div class="row">
+            <div class="span3">
+              <!--<img src="assets/images/nicolas.jpg" class="img-polaroid">-->
+              <div class="container2">
+                <section class="main">
+                   <ul class="ch-grid">
+                    <li>
+                      <div class="ch-item ch-img-23">
+                        <div class="ch-info-wrap">
+                          <div class="ch-info">
+                            <div class="ch-info-front ch-img-1"></div>
+                            <div class="ch-info-back">
+                              <h3>Adrian C.</h3>
+                          <p>GDG Guatemala<a href="https://plus.google.com/u/0/105961284541566561789/posts" target="_new">GPlus</a></p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                </section>
+              </div>
+            </div>
+            <div class="span9">
+              <h3>Adrian Catal&aacute;n</h3>
+              <h4>Google Developer Expert</h4>
+              <div class="hr"><hr /></div>
+              <p>Adrián Catalán es co fundador de Elemental Geeks y co fundador del Google Developers Group Guatemala. Cuenta con estudios de pregrado en informática y telecomunicaciones y de postgrado en seguridad informática, redes, administración de negocios y tecnología educativa, recientemente fue visiting scholar en Purdue University donde trabajó en investigación del área humano-computador. Catedrático universitario desde el 2006, ha dictado diversos cursos y conferencias en Guatemala, Honduras y México. Se considera a sí mismo educador, desarrollador de software, curioso, soñador y entusiasta. Sus principales intereses son móviles, creatividad, innovación, entrepreneurship y todo lo que se puede construir con estas herramientas.</p>
+            </div>
+          </div>
+        </div>
+      </div><!-- /.row -->
+
+
+      <!-- FEDERICO -->
+        <div class="row">
+
+        <div class="span12">
+          <div class="row">
+            <div class="span3">
+              <!--<img src="assets/images/nicolas.jpg" class="img-polaroid">-->
+              <div class="container2">
+                <section class="main">
+                   <ul class="ch-grid">
+                    <li>
+                      <div class="ch-item ch-img-24">
+                        <div class="ch-info-wrap">
+                          <div class="ch-info">
+                            <div class="ch-info-front ch-img-1"></div>
+                            <div class="ch-info-back">
+                              <h3>Federico C.</h3>
+                          <p>GDG Santa Fé<a href="https://plus.google.com/u/0/103910318142717700223/posts" target="_new">GPlus</a></p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                </section>
+              </div>
+            </div>
+            <div class="span9">
+              <h3>Federico Castoldi</h3>
+              <h4>Google Developer Expert</h4>
+              <div class="hr"><hr /></div>
+              <p>
+              Uno de los fundadores del Grupo de Investigación y Desarrollo en Dispositivos Móviles (GIDETEM) en la Facultad de Ingeniería y Ciencias Hídricas de la Universidad Nacional Del Litoral conformado por Alumnos, Docentes y Graduados a fines de 2011. En el mismo desarrolló su Proyecto final de carrera “DomoMovil” concluyendo su investigación iniciada en 2008 con domótica y desarrollando un producto conformado por una aplicación ANDROID. El mismo fué premiado por Innovar el <a href="http://www.innovar.gob.ar" target="_new">concurso de Innovación Tecnológica</a> de la Nación funcionando en Tecnópolis como muestra de innovación nacional. En la cual sigue desarrollando su conocimiento en perfeccionar este sistema.</p>
+
+
+
+
+            </div>
+          </div>
+        </div>
+      </div><!-- /.row -->
     </div>
 
     <br><br>
