--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 
 
-     
+
 
 
 
@@ -162,29 +162,31 @@
       <g:plusone size="tall"></g:plusone>
 
     <a href="https://twitter.com/share" class="twitter-share-button" data-text="#AndroidTourPeru #GDGLima #GDGArequipa con #DavidChandler" data-via="gdglima" data-lang="es" data-hashtags="AndroidTourPeru">Twittear</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script> <b>Tuitea los Hashtags!</b><b style="color:#4d8cf6;">
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script> <b>Hashtags Oficiales</b><b style="color:#4d8cf6;">
 #AndroidTourPeru - #GDGLima - #GDGArequipa</b>
 </div>
 
    </a><br>
-   <a style="color:#000; text-decoration:none;" target="_blank" href="https://plus.google.com/events/c3s0aq4fjlrpbt86s4i6vt3j53c?hl=es">Google+ del Evento <b style="color:#4d8cf6;">#AndroidTourPeru</b>
+<!--    <a style="color:#000; text-decoration:none;" target="_blank" href="https://plus.google.com/events/c3s0aq4fjlrpbt86s4i6vt3j53c?hl=es">Google+ del Evento <b style="color:#4d8cf6;">#AndroidTourPeru</b> -->
 
 <hr>
 
 <div align="center" id="evenbrite">
-  <h2>El ingreso es libre y totalmente gratuito previo registro <b style="color:#4d8cf6;">#GoogleforEntrepreneurs</b></h2><h1>Regístrate aquí para el 1 de Abril</h1><br>
+  <h2>El ingreso es libre y totalmente gratuito previo registro</h2>
+  <h1><a href="http://gdglima-entrepreneurs.eventbrite.com/" target="_new">Google Tools for Entrepreneurs el 1 de Abril</a></h1><br>
   <div style="width:80%; text-align:left; opacity:0.75;" ><iframe  src="http://www.eventbrite.com/tickets-external?eid=5824275565&ref=etckt&v=2" frameborder="0" height="214" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Vender entradas en línea</a> <span style="color:#ddd;">a través de</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
 </div>
 
 
 <br>
- 
+
 <div align="center" id="evenbrite">
-  <h2>El ingreso es libre y totalmente gratuito previo registro <b style="color:#4d8cf6;">#AndroidLimaDay</b></h2><h1>Regístrate aquí para el 2 de Abril</h1><br>
+
+  <h1><a href="http://androidtourperu.eventbrite.com/" target="_new">GDG Android Tour Per&uacute; el 2 de Abril</a></h1><br>
   <div style="width:80%; text-align:left; opacity:0.75;" ><iframe  src="http://www.eventbrite.com/tickets-external?eid=5696849430&ref=etckt&v=2" frameborder="0" height="214" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Vender entradas en línea</a> <span style="color:#ddd;">a través de</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
 </div>
   <img style="display:block; margin:0 auto 0 auto;  margin-top:-250px;" src=assets/images/androidtheme.png></img>
-  
+
 
 <br><br><br><br>
 
@@ -200,14 +202,14 @@
 
       <p class="pull-left">
         <a href="#">@2013 GDGLima</a>
-        <a href="#">#AndroidTourPeru</a>
+        <a href="https://plus.google.com/events/c3s0aq4fjlrpbt86s4i6vt3j53c?hl=es" target="new">#AndroidTourPeru</a>
       </p>
 
       <p class="pull-right">
-        <a href="#">Twitter</a> |
-        <a href="#">Facebook</a> |
-        <a href="#">Google Plus</a> |
-        <a href="#">Back to top</a>
+        <a href="https://twitter.com/gdglima" target="new">Twitter</a> |
+        <a href="https://www.facebook.com/gdglima" target="new">Facebook</a> |
+        <a href="https://plus.google.com/106035957065756239824/posts" target="new">Google Plus</a> |
+        <a href="#" target="new">Back to top</a>
       </p>
 
     </footer>
