--- a/nav_programa.html
+++ b/nav_programa.html
@@ -92,7 +92,7 @@
         </div>
 	</div>
     <div class="hero headings">
-        <h3 style="background-color:#FFFFFF; border-radius:30%; color:#4d8cf6;" align="center">Lunes 1 de Abril 2013: Google for Entrepreneurs</h3>
+        <h3 style="background-color:#FFFFFF; color:#4d8cf6;" align="center">Lunes 1 de Abril 2013: Google for Entrepreneurs</h3>
         <h3>De 7:00PM a 9:30PM</h3>
         <h4>Universidad Peruana de Ciencias Aplicadas UPC- Sede Monterrico - Aula Magna</h4>
         <h4>Registro: <a href="http://gdglima-entrepreneurs.eventbrite.com/">gdglima-entrepreneurs.eventbrite.com</a></h4>
@@ -134,7 +134,7 @@
 					</td>
 				</tr>
 
-				
+
     		</tbody>
     	</table>
     </div>
@@ -142,7 +142,7 @@
 
 
  <div class="hero headings">
-        <h3 style="background-color:#4d8cf6; border-radius:30%; color:white;" align="center">Martes 02 de Abril 2013: Android Lima Day</h3>
+        <h3 style="background-color:#4d8cf6; color:white;" align="center">Martes 02 de Abril 2013: Android Lima Day</h3>
         <h3>De 3:00PM a 8:30PM</h3>
         <h4>Facultad de Ingeniería - Universidad San Martín de Porres USMP</h4>
         <h4>Registro: <a href="http://androidtourperu.eventbrite.com/">androidtourperu.eventbrite.com</a></h4>
@@ -213,15 +213,15 @@
     <footer>
 
       <p class="pull-left">
-        <a class="lead" href="#">@2013 GDGLima</a>
-        <a class="lead" href="#">#AndroidTourPeru</a>
+        <a href="#">@2013 GDGLima</a>
+        <a href="https://plus.google.com/events/c3s0aq4fjlrpbt86s4i6vt3j53c?hl=es" target="new">#AndroidTourPeru</a>
       </p>
 
       <p class="pull-right">
-        <a href="#">Twitter</a> |
-        <a href="#">Facebook</a> |
-        <a href="#">Google Plus</a> |
-        <a href="#">Back to top</a>
+        <a href="https://twitter.com/gdglima" target="new">Twitter</a> |
+        <a href="https://www.facebook.com/gdglima" target="new">Facebook</a> |
+        <a href="https://plus.google.com/106035957065756239824/posts" target="new">Google Plus</a> |
+        <a href="#" target="new">Back to top</a>
       </p>
 
     </footer>
