--- a/nav_sponsor.html
+++ b/nav_sponsor.html
@@ -111,7 +111,7 @@
 
 
           <li>
-            <div class="ch-item"> 
+            <div class="ch-item">
               <div class="ch-info">
                 <h3>USMP</h3>
                 <p>Universidad de San Martín de Porres<a href="http://www.usmp.edu.pe" target="_blank"><br>www</a></p>
@@ -121,7 +121,7 @@
           </li>
 
           <li>
-            <div class="ch-item"> 
+            <div class="ch-item">
               <div class="ch-info">
                 <h3>UPC</h3>
                 <p>Universidad Peruana de Ciencias Aplicadas<a href="http://www.upc.edu.pe" target="_blank"><br>www</a></p>
@@ -131,7 +131,7 @@
           </li>
 
         <li>
-            <div class="ch-item"> 
+            <div class="ch-item">
               <div class="ch-info">
                 <h3>Belatrix</h3>
                 <p>Gold Sponsor<a href="http://www.belatrixsf.com" target="_blank"><br>www</a></p>
@@ -140,13 +140,13 @@
             </div>
           </li>
 
-          
+
 
 
         </ul>
 
 
-    	    
+
           </div>
   	      <!--   <div class="span3">
   	        	<img data-src="holder.js/300x200" alt="">
@@ -163,15 +163,15 @@
     <footer>
 
       <p class="pull-left">
-        <a class="lead" href="#">@2013 GDGLima</a>
-        <a class="lead" href="#">#AndroidTourPeru</a>
+        <a href="#">@2013 GDGLima</a>
+        <a href="https://plus.google.com/events/c3s0aq4fjlrpbt86s4i6vt3j53c?hl=es" target="new">#AndroidTourPeru</a>
       </p>
 
       <p class="pull-right">
-        <a href="#">Twitter</a> |
-        <a href="#">Facebook</a> |
-        <a href="#">Google Plus</a> |
-        <a href="#">Back to top</a>
+        <a href="https://twitter.com/gdglima" target="new">Twitter</a> |
+        <a href="https://www.facebook.com/gdglima" target="new">Facebook</a> |
+        <a href="https://plus.google.com/106035957065756239824/posts" target="new">Google Plus</a> |
+        <a href="#" target="new">Back to top</a>
       </p>
 
     </footer>
