--- a/nav_team.html
+++ b/nav_team.html
@@ -206,7 +206,7 @@
               </div>
             </div>
           </li>
- 
+
 <li>
             <div class="ch-item ch-img-22">
               <div class="ch-info">
@@ -270,9 +270,9 @@
 
 
 
-          
 
-  
+
+
         </ul>
 
       </section>
@@ -319,15 +319,15 @@
     <footer>
 
       <p class="pull-left">
-        <a class="lead" href="#">@2013 GDGLima</a>
-        <a class="lead" href="#">#AndroidTourPeru</a>
+        <a href="#">@2013 GDGLima</a>
+        <a href="https://plus.google.com/events/c3s0aq4fjlrpbt86s4i6vt3j53c?hl=es" target="new">#AndroidTourPeru</a>
       </p>
 
       <p class="pull-right">
-        <a href="#">Twitter</a> |
-        <a href="#">Facebook</a> |
-        <a href="#">Google Plus</a> |
-        <a href="#">Back to top</a>
+        <a href="https://twitter.com/gdglima" target="new">Twitter</a> |
+        <a href="https://www.facebook.com/gdglima" target="new">Facebook</a> |
+        <a href="https://plus.google.com/106035957065756239824/posts" target="new">Google Plus</a> |
+        <a href="#" target="new">Back to top</a>
       </p>
 
     </footer>
